# AI_backend_Holy_Ielts

./: .env.example  .gitignore  README.md  frontend_test.html  pyproject.toml  requirements.txt
src/: main.py
src/core/: config.py  database.py  lifespan.py  logging.py  security.py
src/db/: alembic.ini  base.py  seed.py
src/modules/admin/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/ai/: __init__.py  exceptions.py  factory.py  schemas.py  service.py
src/modules/auth/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/listening/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/payments/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/reading/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/speaking/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/uploads/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/users/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py
(+23 files in other folders)
