[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.pyright]
# Tắt tính năng tự động tìm src làm root
autoSearchPaths = false
# Ép buộc Pylance sử dụng thư mục gốc của dự án làm root
extraPaths = ["."]
